2002-04-10  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-bitmap.el (w3m-create-image): Use w3m-process-do-with-temp-buffer
	instead of w3m-process-do.
	(w3m-create-image): Don't call `set-buffer-multibyte' if old mule.

	* w3m-image.el (w3m-imagick-start-convert-buffer): Removed needless
	`concat'.

	* w3m-bitmap.el (w3m-create-image): 
	Call `w3m-imagick-start-convert-buffer' instead of
	`w3m-imagick-convert-data'.

2002-04-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-bitmap.el (w3m-bitmap-current-column): New function for old
	Emacsen; alias to `current-column' for the recent Emacsen.
	(w3m-bitmap-move-to-column-force): New function for old Emacsen;
	alias to `move-to-column-force' for the recent Emacsen.

2002-04-10  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-image.el (w3m-imagick-convert-data): Check buffer size.
	(w3m-imagick-start-convert-data): Ditto.
	(w3m-imagick-start-convert-buffer): Don't use output file
	(Because it sometimes causes multiple files).

2002-04-10  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3mhack.el (w3mhack-examine-modules): Reverse the turn of the
	load with `bitmap' and `un-define'.

2002-04-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-bitmap.el (w3m-bitmap-image-face): New face.
	(w3m-bitmap-image-insert-internal): Put text properties.
	(w3m-bitmap-image-insert): Pass text properties argument to
	`w3m-bitmap-image-insert-internal'.
	(w3m-bitmap-image-add-text-properties): Remove.
	(w3m-insert-image): Pass text properties to
	`w3m-bitmap-image-insert'.

2002-04-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-bitmap.el (w3m-bitmap-image-get-overlay): Use
	`line-beginning-position' and/or `line-end-position'.
	(w3m-bitmap-image-insert-internal): Ditto.
	(w3m-bitmap-image-delete-internal): Ditto.
	(w3m-bitmap-image-add-text-properties): Ditto.

	* w3m-om.el: Require `w3m-bitmap' if BITMAP-MULE is available.
	(move-to-column-force): Define it if void.

2002-04-09  Hideyuki SHIRAI  <shirai@meadowy.org>
